[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scenes/thrishaStuff/images/poster.png" type="Texture" id=1]
[ext_resource path="res://Scenes/thrishaStuff/player.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/thrishaStuff/ChapterOneScripts/Poster.gd" type="Script" id=3]
[ext_resource path="res://icon.png" type="Texture" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 162.077

[node name="Hallway" type="Node2D"]

[node name="Poster" type="Area2D" parent="."]
position = Vector2( 1374, 851 )
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Poster"]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="Poster"]
scale = Vector2( 0.16, 0.16 )
texture = ExtResource( 1 )

[node name="QuestionMark" type="Sprite" parent="Poster"]
position = Vector2( 0, -135 )
texture = ExtResource( 4 )

[node name="player" parent="." instance=ExtResource( 2 )]
position = Vector2( 908, 798 )

[node name="Camera2D" type="Camera2D" parent="player"]
position = Vector2( 54, -261 )
current = true

[connection signal="body_entered" from="Poster" to="Poster" method="_on_Poster_body_entered"]
[connection signal="body_exited" from="Poster" to="Poster" method="_on_Poster_body_exited"]
